--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ header nav a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-left: auto;
 }
 
 /*******************Presentation*************/
@@ -185,9 +186,8 @@ header nav a:hover {
   font-size: 32px;
   text-align: center;
   font-weight: 600;
-  padding: 20px;
-  width: 100%;
-  border-bottom: 1px solid var(--second-color);
+  padding-bottom: 20px;
+  border-bottom: 0.3px solid var(--second-color);
 }
 
 .proyect {
@@ -363,8 +363,7 @@ table td {
 /*SLIDER INFINITO*/
 .skills {
   overflow: hidden; /* Oculta el contenido que sale del contenedor */
-  width: 700px; /* Ajusta esto según tu diseño */
-  border-radius: 45px;
+  width: 900px; /* Ajusta esto según tu diseño */
 }
 
 .skillbar {
@@ -397,4 +396,19 @@ table td {
   100% {
     transform: translateX(0); /* Vuelve a la posición original */
   }
+}
+
+/*CERTIFICACIONES*/
+.certification-img img {
+  width: 600px;
+  height: 100%;
+}
+
+.title-certification {
+  font-family: var(--primary-font);
+  color: var(--second-color);
+  font-size: 32px;
+  font-weight: 600;
+  border-bottom: 0.3px solid var(--second-color);
+  padding: 20px;
 }
